--- a/.env example
+++ b/.env example
@@ -1,1 +1,15 @@
+#PROD-CONFIG
 REACT_APP_SERVER_HOST = 'https://api.stage.vdpaybox.ru/api/receipt/deviceInfo/'
+REACT_APP_OPEN_CHECK = 'https://rt.vdpaybox.ru/info/'
+REACT_APP_VDPAYBOX_HREF = "https://vdpaybox.ru/#/"
+
+
+#STAGE-CONFIG
+REACT_APP_SERVER_HOST = 'https://api.stage.vdpaybox.ru/api/receipt/deviceInfo/'
+REACT_APP_OPEN_CHECK = 'https://rt.stage.vdpaybox.ru/info/'
+REACT_APP_VDPAYBOX_HREF = "https://gate.stage.vdpaybox.ru/#/"
+
+#LOCALHOST
+REACT_APP_SERVER_HOST = 'https://api.stage.vdpaybox.ru/api/receipt/deviceInfo/'
+REACT_APP_OPEN_CHECK = 'https://localhost:3000/info/'
+REACT_APP_VDPAYBOX_HREF = "https://gate.stage.vdpaybox.ru/#/"
